Fixed issue involving replies not showing default pfps

--- a/src/styles/Messages.css
+++ b/src/styles/Messages.css
@@ -15,7 +15,7 @@
   );
   border: 1px solid #83838396;
   border-radius: 15px;
-  color: #333;
+  color: #0f0c0c;
   font-size: 16px;
   font-family: Verdana, sans-serif;
   font-weight: bold;
